# luma

./: .gitignore  AGENTS.md  README.md  index.html  package.json
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.github/: RELEASE_NOTES_TEMPLATE.md
.github/workflows/: release.yml
docs/: CNAME  index.html
scripts/: generate_luma_icons.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: ClipboardHistory.tsx  FocusedTaskHint.tsx  LumaCompanion.tsx  LumaMascotIcon.tsx  PomodoroTimer.tsx  ReminderPopover.tsx  SectionCard.tsx  SettingsPanel.tsx  SystemStats.tsx  TaskList.tsx  UpdateBanner.tsx
src/context/: SettingsContext.tsx  TasksContext.tsx  settingsDefaults.ts
src/data/: companionChatter.ts
src/hooks/: useClipboard.ts  usePomodoro.ts  useSettings.ts  useSystemStats.ts  useTasks.ts
src/lib/: dataPaths.ts  notifications.ts  pomodoroBridge.ts  store.ts  tauri.ts  updateCheck.ts
src/types/: index.ts
